<resources>
    <string name="app_name">FinalProjectBucci</string>
    <string name="ace_restuarant">Ace Restuarant</string>
    <string name="menu">MENU</string>
    <string name="calorie_counter">CALORIE COUNTER</string>
    <string name="online_ordering">ONLINE ORDERING</string>
    <string name="reservations">RESERVATIONS</string>
    <string name="beverage_mixer">BEVERAGE MIXER</string>
    <string name="get_directions">GET DIRECTIONS</string>
    <string name="about_us">ABOUT US</string>
    <string name="contact_us">CONTACT US</string>
    <string name="catering">CATERING</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="tab_rest">Restaurateurs</string>
    <string name="tab_headchef">Head Chef</string>
    <string name="tab_manager">Manager</string>
    <string name="tab_hostess">Hostess</string>
    <string name="tab_sommelier">Sommelier</string>
    <string name="tab_servers">Servers</string>
    <string name="manager_Name">Man Ager</string>
    <string name="title_activity_locate">Map</string>
    <string name="managerHometown">Hometown: Philly</string>
    <string name="managerBio">Man Ager was born into the restaurant business. Literally, he was born in a restaurant. Not this one, thankfully. But he does treat Ace like it is his home. Man likes to work, and go home to hang out with his kids: Microman Ager and Subman Ager. His wife\'s name is Dorothy.</string>
    <string name="hostessBio">Tess has been with us for 10 years. She loves her job, loves helping people sit at their tables. While shes not working, she lives with her husband and their 54 dogs, all named Jeremy.</string>
    <string name="hostessName">Tess Hos</string>
    <string name="hostessHometown">Hometown: South Jersey</string>
    <string name="chefName">Jon Favreau</string>
    <string name="chefHometown">Hometown: \"outside\" Philadelphia</string>
    <string name="chefBio">Jon, confusingly enough, is not related to a more familiar Jon Favreau, who happened to write, direct, and star in a movie about a chef called Chef. Complete coincidence. We currently have 2 data scientists and a statistician on staff working to crack the odds of this particular occurrence. Anyway, Jon has been our head chef for 3 years. Her specialties include cubano sandwiches. Again, with no prior knowledge of that being the main dish in Chef. She has never seen it.</string>
    <string name="rest1Name">Dollar Bill</string>
    <string name="rest1Bio">Dollar Bill, our co-owner, came up with idea of Ace Restaurant when he lost the World Poker Tour because he needed an Ace, and didn\'t get one. So he built one!</string>
    <string name="rest2Name">Electric Bill</string>
    <string name="rest2Bio">Electric Bill is Dollar\'s twin brother. They look exactly the same, its uncanny. Electric takes care of the utilities side of restaurant. Electric has a dog, named Pikachu.</string>
    <string name="sommName">Pinot Noir</string>
    <string name="sommBio">Pinot likes wine. I ran out of cleverness. I will update this bio for my final submission</string>
    <string name="server1Name">Ser Ver </string>
    <string name="server2Name">Frank</string>
    <string name="server1Bio">Ser Ver is a knight. Again, will update this bio more cleverly for final. Wanted to work on functionality.</string>
    <string name="server2Bio">See above</string>
    <string name="button_menu">MENU</string>
    <string name="orderButtonText">ORDER</string>
    <string name="calorieButtonText">CALORIES</string>
    <string name="cateringButtonText">CATERING</string>
    <string name="mixerButtonText">MIXER</string>
    <string name="reserveButtonText">RESERVE</string>
    <string name="locateButtonText">LOCATE</string>
    <string name="aboutButtonText">ABOUT</string>
    <string name="contactButtonText">CONTACT</string>
</resources>
