<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bio2"
        android:layout_width="376dp"
        android:layout_height="221dp"
        android:autoSizeMaxTextSize="21dp"
        android:autoSizeMinTextSize="18dp"
        android:autoSizeTextType="uniform"
        android:ems="10"
        android:gravity="start|top"
        android:text="@string/rest2Bio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="154dp"
        android:layout_height="125dp"
        android:src="@drawable/rest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="198dp"
        android:layout_height="58dp"
        android:layout_weight="1"
        android:text="@string/rest1Name"
        android:textAlignment="textStart"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hometown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/managerHometown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/bio"
        android:layout_width="376dp"
        android:layout_height="221dp"
        android:autoSizeMaxTextSize="21dp"
        android:autoSizeMinTextSize="18dp"
        android:autoSizeTextType="uniform"
        android:ems="10"
        android:gravity="start|top"
        android:text="@string/rest1Bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="154dp"
        android:layout_height="125dp"
        android:src="@drawable/rest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bio" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="198dp"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/rest2Name"
        android:textAlignment="textStart"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/bio" />

    <TextView
        android:id="@+id/hometown2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/managerHometown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/name2" />


</androidx.constraintlayout.widget.ConstraintLayout>
